OpenDelta: Convert State to an IntDef / enum
this should offer more performance and maintainability
improve a lot of code in MainActivity while at it